fix review, hover, nav gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@
 .header__theme-menu-list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 15px;
 }
 
 .header__theme-menu-button {
