--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,5 +15,4 @@
   --accent-font: 'IBM Plex Mono', monospace;
   --background-color: #000028;
   --bg-accent-text: #ff0070;
-  --button-hover-color: rgb(50 49 45 / 0.4);
 }
